--- a/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
+++ b/Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/gcm_defaultSenderId,@string/google_storage_bucket,@string/project_id,@string/google_api_key,@string/google_crash_reporting_api_key,@string/google_app_id">
   <string name="gcm_defaultSenderId" translatable="false">601776479226</string>
-  <string name="google_storage_bucket" translatable="false">justypieprojects.appspot.com</string>
+  <string name="google_storage_bucket" translatable="false">justypieprojects.firebasestorage.app</string>
   <string name="project_id" translatable="false">justypieprojects</string>
   <string name="google_api_key" translatable="false">AIzaSyCH6wwmqUkXq5FHZcb2YfOIwK8VLpA3Or8</string>
   <string name="google_crash_reporting_api_key" translatable="false">AIzaSyCH6wwmqUkXq5FHZcb2YfOIwK8VLpA3Or8</string>
-  <string name="google_app_id" translatable="false">1:601776479226:android:0e34cb7d88e257f6292243</string>
+  <string name="google_app_id" translatable="false">1:601776479226:android:24cfcbb3c3bb0454292243</string>
 </resources>
